Only save cache on merge to master, clean up workflows to restore cache

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -54,13 +54,25 @@ jobs:
     - name: Setup dependencies
       run: ./make.sh ci-setup-deps
 
-    - name: Setup dependencies for user
+    - name: Setup user dependencies
       run: ./make.sh ci-setup-user-deps
+
+    - name: Restore build depends
+      uses: actions/cache/restore@v3
+      with:
+        path: ./build/depends
+        key: ${{ env.TARGET }}-${{ env.BUILD_TYPE }}-depends
 
     - uses: Swatinem/rust-cache@v2
       with:
         workspaces: lib -> ../build/lib/target
         save-if: ${{ github.ref == 'refs/heads/master' }}
+
+    - name: Restore ccache
+      uses: actions/cache/restore@v3
+      with:
+        path: ./build/.ccache
+        key: ${{ env.TARGET }}-${{ env.BUILD_TYPE }}-ccache
 
     - name: Build depends and configure
       run: ./make.sh build-deps && ./make.sh build-conf
