--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -47,8 +47,8 @@ jobs:
     - name: Setup user dependencies
       run: ./make.sh ci-setup-user-deps
 
-    - name: Cache build depends
-      uses: actions/cache@v3
+    - name: Restore build depends
+      uses: actions/cache/restore@v3
       with:
         path: ./build/depends
         key: ${{ env.TARGET }}-${{ env.BUILD_TYPE }}-depends
@@ -58,14 +58,14 @@ jobs:
         workspaces: lib -> ../build/lib/target
         save-if: ${{ github.ref == 'refs/heads/master' }}
 
-    - name: Cache cpp build
-      uses: actions/cache@v3
+    - name: Restore cpp build
+      uses: actions/cache/restore@v3
       with:
         path: ./build/src
         key: ${{ env.TARGET }}-${{ env.BUILD_TYPE }}-cpp
 
-    - name: Cache ccache
-      uses: actions/cache@v3
+    - name: Restore ccache
+      uses: actions/cache/restore@v3
       with:
         path: ./build/.ccache
         key: ${{ env.TARGET }}-${{ env.BUILD_TYPE }}-ccache
@@ -78,6 +78,27 @@ jobs:
       with:
         name: defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}
         path: ./build/defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}.${{ env.PKG_TYPE }}
+
+    - name: Cache build depends
+      if: ${{ github.ref == 'refs/heads/master' }}
+      uses: actions/cache/save@v3
+      with:
+        path: ./build/depends
+        key: ${{ env.TARGET }}-${{ env.BUILD_TYPE }}-depends
+
+    - name: Cache cpp build
+      if: ${{ github.ref == 'refs/heads/master' }}
+      uses: actions/cache/save@v3
+      with:
+        path: ./build/src
+        key: ${{ env.TARGET }}-${{ env.BUILD_TYPE }}-cpp
+
+    - name: Cache ccache
+      if: ${{ github.ref == 'refs/heads/master' }}
+      uses: actions/cache/save@v3
+      with:
+        path: ./build/.cacche
+        key: ${{ env.TARGET }}-${{ env.BUILD_TYPE }}-ccache
 
   docker-build:
     runs-on: ubuntu-latest
