--- a/.github/workflows/tests-frontier.yml
+++ b/.github/workflows/tests-frontier.yml
@@ -10,6 +10,10 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
   cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
 
+env:
+  TARGET: x86_64-pc-linux-gnu
+  MAKE_DEBUG: 0
+
 jobs:
   build:
     runs-on: ubuntu-latest
