--- a/.github/workflows/tests-jellyfish.yml
+++ b/.github/workflows/tests-jellyfish.yml
@@ -12,6 +12,8 @@ concurrency:
 
 env:
   BUILD_VERSION: latest # Computed
+  MAKE_DEBUG: 0
+  GIT_VERSION: 1
 
 jobs:
   test:
@@ -33,7 +35,7 @@ jobs:
           node-version: '18'
 
       - name: Populate environment
-        run: cd defichain && GIT_VERSION=1 ./make.sh ci-export-vars
+        run: cd defichain && ./make.sh ci-export-vars
 
       - name: Build and setup
         run: "cd defichain && docker build -t test-build-container
