--- a/lib/ain-ocean/Cargo.toml
+++ b/lib/ain-ocean/Cargo.toml
@@ -12,3 +12,6 @@ serde = { version = "1.0", features = ["derive"] }
 tokio-serde = { version = "0.8.0", features = ["json"] }
 log = "0.4"
 futures = "0.3.29"
+async-trait = "0.1.74"
+anyhow = "1.0.75"
+jsonrpsee =  { version = "0.20.3", features = ["server", "macros", "http-client", "jsonrpsee-server"] }
