--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -46,7 +46,7 @@ jobs:
       
     - name: Setup user dependencies
       run: ./make.sh ci-setup-user-deps
-    
+
     - name: Restore cpp build cache
       id: cpp-cache-restore
       uses: actions/cache/restore@v3
@@ -57,13 +57,10 @@ jobs:
           ./build/.ccache
         key: cpp-${{ env.TARGET }}-${{ env.BUILD_TYPE }}
 
-    - name: Restore rust build cache
-      uses: Swatinem/rust-cache@v2
-      id: rust-cache-restore
+    - uses: Swatinem/rust-cache@v2
       with:
         workspaces: lib -> ../build/lib/target
-        # save-if: ${{ github.ref == 'refs/heads/master' }}
-        shared-key: rust-${{ env.TARGET }}-${{ env.BUILD_TYPE }}
+        save-if: ${{ github.ref == 'refs/heads/master' }}
 
     - name: Build and package
       run: ./make.sh release
@@ -83,15 +80,6 @@ jobs:
       run: |
         gh extension install actions/gh-actions-cache
         gh actions-cache delete "cpp-${{ env.TARGET }}-${{ env.BUILD_TYPE }}" --confirm
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Delete previous rust cache
-      if: ${{ github.ref == 'refs/heads/master' }} && ${{ steps.rust-cache-restore.outputs.cache-hit }}
-      continue-on-error: true
-      run: |
-        gh extension install actions/gh-actions-cache
-        gh actions-cache delete "rust-${{ env.TARGET }}-${{ env.BUILD_TYPE }}" --confirm
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
