Add shared key to rust cache

--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -46,7 +46,7 @@ jobs:
       
     - name: Setup user dependencies
       run: ./make.sh ci-setup-user-deps
-
+    
     - name: Restore cpp build cache
       id: cpp-cache-restore
       uses: actions/cache/restore@v3
@@ -57,10 +57,13 @@ jobs:
           ./build/.ccache
         key: cpp-${{ env.TARGET }}-${{ env.BUILD_TYPE }}
 
-    - uses: Swatinem/rust-cache@v2
+    - name: Restore rust build cache
+      uses: Swatinem/rust-cache@v2
+      id: rust-cache-restore
       with:
         workspaces: lib -> ../build/lib/target
-        save-if: ${{ github.ref == 'refs/heads/master' }}
+        # save-if: ${{ github.ref == 'refs/heads/master' }}
+        shared-key: ${{ env.TARGET }}
 
     - name: Build and package
       run: ./make.sh release
