--- a/.github/workflows/tests-frontier.yml
+++ b/.github/workflows/tests-frontier.yml
@@ -30,10 +30,13 @@ jobs:
     - name: Setup user dependencies
       run: ./make.sh ci-setup-user-deps
 
-    - uses: Swatinem/rust-cache@v2
+    - name: Restore rust build cache
+      uses: Swatinem/rust-cache@v2
+      id: rust-cache-restore
       with:
         workspaces: lib -> ../build/lib/target
         save-if: ${{ github.ref == 'refs/heads/master' }}
+        shared-key: ${{ env.TARGET }}
 
     - name: Build binaries
       run: ./make.sh build
