--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -57,10 +57,12 @@ jobs:
     - name: Setup dependencies for user
       run: ./make.sh ci-setup-user-deps
 
-    - uses: Swatinem/rust-cache@v2
+    - name: Restore rust build cache
+      uses: Swatinem/rust-cache@v2
       with:
         workspaces: lib -> ../build/lib/target
         save-if: ${{ github.ref == 'refs/heads/master' }}
+        shared-key: ${{ env.TARGET }}
 
     - name: Build depends and configure
       run: ./make.sh build-deps && ./make.sh build-conf
