--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -43,10 +43,10 @@ jobs:
 
     - name: Setup dependencies
       run: ./make.sh ci-setup-deps
-      
+
     - name: Setup user dependencies
       run: ./make.sh ci-setup-user-deps
-    
+
     - name: Restore cpp build cache
       id: cpp-cache-restore
       uses: actions/cache/restore@v3
@@ -62,7 +62,7 @@ jobs:
       id: rust-cache-restore
       with:
         workspaces: lib -> ../build/lib/target
-        save-if: ${{ github.ref == 'refs/heads/master' }}
+        # save-if: ${{ github.ref == 'refs/heads/master' }}
         shared-key: ${{ env.TARGET }}
 
     - name: Build and package
