--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -57,7 +57,7 @@ jobs:
     - name: Setup dependencies for user
       run: ./make.sh ci-setup-user-deps
 
-    - name: Restore rust build cache
+    - name: Rust cache
       uses: Swatinem/rust-cache@v2
       with:
         workspaces: lib -> ../build/lib/target
