--- a/lib/ain-ocean/Cargo.toml
+++ b/lib/ain-ocean/Cargo.toml
@@ -18,3 +18,6 @@ bitcoin = "0.30.1"
 rocksdb = "0.21.0"
 ctrlc = "3.1.9"
 tempdir = "0.3.7"
+hex = "0.4"
+bitcoin_hashes = "0.12.0"
+structopt = { version = "0.3", default-features = false }
