Start ocean server

--- a/lib/ain-evm/Cargo.toml
+++ b/lib/ain-evm/Cargo.toml
@@ -42,6 +42,7 @@ lazy_static.workspace = true
 jsonrpsee-core.workspace = true
 jsonrpsee-server.workspace = true
 jsonrpsee-types.workspace = true
+axum.workspace = true
 tokio = { workspace = true, features = ["rt-multi-thread"] }
 
 # Cache dependencies
