Switch to set-safe-directory setting

--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -36,7 +36,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - run: git config --global --add safe.directory '*'
+      with:
+        set-safe-directory: '*'
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
@@ -101,7 +102,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - run: git config --global --add safe.directory '*'
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
