--- a/.github/workflows/build-staging.yaml
+++ b/.github/workflows/build-staging.yaml
@@ -22,7 +22,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - run: git config --global --add safe.directory '*'
+      with:
+        set-safe-directory: '*'
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
@@ -52,7 +53,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - run: git config --global --add safe.directory '*'
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
