Revert from set safe directory

--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -36,8 +36,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-      with:
-        set-safe-directory: '*'
+    - run: git config --global --add safe.directory '*'
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
