--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -24,8 +24,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-      with:
-        set-safe-directory: '*'
+    - run: git config --global --add safe.directory '*'
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
