--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -46,8 +46,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-      with:
-        set-safe-directory: '*'
+    - run: git config --global --add safe.directory '*'
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
