--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -112,10 +112,7 @@ jobs:
         path: ./build/
     
     - name: Unpack binaries
-      run: tar -xvzf ./build/defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}.${{ env.PKG_TYPE }}
-
-    - name: Add debug logging
-      run: ls -lahR .
+      run: tar -xvzf ./build/defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}.${{ env.PKG_TYPE }} -C ./build/
 
     - name: Build defi image
       run: rm .dockerignore && ./make.sh docker-defi-build
