--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -88,6 +88,10 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}
+        path: ./build/
+    
+    - name: Unpack binaries
+      run: tar -xvzf ./build/defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}.${{ env.PKG_TYPE }} -C ./build/
 
     - name: Build defi image
       run: rm .dockerignore && ./make.sh docker-defi-build
