Re-enable save only on master for rust lint

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -61,7 +61,7 @@ jobs:
       uses: Swatinem/rust-cache@v2
       with:
         workspaces: lib -> ../build/lib/target
-        # save-if: ${{ github.ref == 'refs/heads/master' }}
+        save-if: ${{ github.ref == 'refs/heads/master' }}
         shared-key: rust-lint
 
     - name: Build depends and configure
