--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -61,8 +61,8 @@ jobs:
       uses: Swatinem/rust-cache@v2
       with:
         workspaces: lib -> ../build/lib/target
-        save-if: ${{ github.ref == 'refs/heads/master' }}
-        shared-key: rust-lint
+        # save-if: ${{ github.ref == 'refs/heads/master' }}
+        shared-key: lint
 
     - name: Build depends and configure
       run: ./make.sh build-deps && ./make.sh build-conf
