--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -115,7 +115,7 @@ jobs:
       run: tar -xvzf ./build/defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}.${{ env.PKG_TYPE }} -C ./build/
 
     - name: Build defi image
-      run: rm .dockerignore && ./make.sh docker-defi-build
+      run: rm .dockerignore && ./make.sh docker-build-from-binaries
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
