--- a/.github/workflows/build-staging.yaml
+++ b/.github/workflows/build-staging.yaml
@@ -66,4 +66,4 @@ jobs:
       run: tar -xvzf ./build/defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}.${{ env.PKG_TYPE }} -C ./build/
 
     - name: Build defi image
-      run: rm .dockerignore && ./make.sh docker-defi-build
+      run: rm .dockerignore && ./make.sh docker-build-from-binaries
