--- a/lib/ain-ocean/Cargo.toml
+++ b/lib/ain-ocean/Cargo.toml
@@ -26,3 +26,4 @@ ctrlc = "3.1.9"
 tempdir = "0.3.7"
 bitcoin_hashes = "0.12.0"
 structopt = { version = "0.3", default-features = false }
+tempfile = "3.8.1"
