CI: Add cpp caching and rust cache fixes in CI build workflows (#2721)
* Add ccache into ci build-dev workflow, add caching

* Fix build failure

* Disable save if rust cache condition

* Add build type

* Revert rust cache

* Remove rust caching from release and staging

* Add shared key to rust cache

* Fix ccache and rust cache key

* Switch debugging log

* Explicitly set ccache_dir

* Disable delete cpp cache on master

* Fix make.sh

* Fix ccache dir

* Fix ccache dir

* Disable save if on rust cache

* Add gh deps

* Fix base deps

* Use cpp caching to all workflows

* Install gh deps on ci setup deps

* Make.sh fixes

* Enable save only on master in build dev

* Better rename

* Fix if condition

* Enable cpp save

* Enable save cache condition check

* Switch to set-safe-directory setting

* Revert from set safe directory

* Unpack package and port into docker image instead

* Add debugging log

* Fix tar command

* Resave cache

* Save only on master

* Pass binary dir relative to docker root context

* Save rust cache separately for lint

* Better shared key naming

* Save cache

* Re-enable save only on master for rust lint

* Better rename

* Re-enable save only on master

* Rename

* Rename to docker build from binaries

* Better rename

--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -43,14 +43,27 @@ jobs:
 
     - name: Setup dependencies
       run: ./make.sh ci-setup-deps
-      
+
     - name: Setup user dependencies
       run: ./make.sh ci-setup-user-deps
 
-    - uses: Swatinem/rust-cache@v2
+    - name: Restore cpp build cache
+      id: cpp-cache-restore
+      uses: actions/cache/restore@v3
+      with:
+        path: |
+          ./build/depends
+          ./build/src
+          ~/.ccache
+        key: cpp-${{ env.TARGET }}-${{ env.BUILD_TYPE }}
+
+    - name: Rust build cache
+      uses: Swatinem/rust-cache@v2
+      id: rust-cache-restore
       with:
         workspaces: lib -> ../build/lib/target
         save-if: ${{ github.ref == 'refs/heads/master' }}
+        shared-key: ${{ env.TARGET }}
 
     - name: Build and package
       run: ./make.sh release
@@ -61,6 +74,25 @@ jobs:
         name: defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}
         path: ./build/defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}.${{ env.PKG_TYPE }}
 
+    - name: Delete previous cpp build cache
+      if: ${{ github.ref == 'refs/heads/master' && steps.cpp-cache-restore.outputs.cache-hit }}
+      continue-on-error: true
+      run: |
+        gh extension install actions/gh-actions-cache
+        gh actions-cache delete "cpp-${{ env.TARGET }}-${{ env.BUILD_TYPE }}" --confirm
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Save cpp build cache
+      if: ${{ github.ref == 'refs/heads/master' }}
+      uses: actions/cache/save@v3
+      with:
+        path: |
+          ./build/depends
+          ./build/src
+          ~/.ccache
+        key: cpp-${{ env.TARGET }}-${{ env.BUILD_TYPE }}
+
   docker-build:
     runs-on: ubuntu-latest
     needs: [build]
@@ -69,18 +101,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - run: git config --global --add safe.directory '*'
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
 
-    - name: Download Binaries
+    - name: Download binaries
       uses: actions/download-artifact@v3
       with:
         name: defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}
+        path: ./build/
+    
+    - name: Unpack binaries
+      run: tar -xvzf ./build/defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}.${{ env.PKG_TYPE }} -C ./build/
 
     - name: Build defi image
-      run: rm .dockerignore && ./make.sh docker-defi-build
+      run: rm .dockerignore && ./make.sh docker-build-from-binaries
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
