fail-fast false

--- a/.github/workflows/tests-ocean.yml
+++ b/.github/workflows/tests-ocean.yml
@@ -60,6 +60,8 @@ jobs:
     name: Jellyfish Whale Api tests
     runs-on: ubuntu-latest
     needs: build
+    strategy:
+      fail-fast: false
 
     steps:
       - uses: actions/checkout@v4
