--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -7,12 +7,14 @@ on:
 
 env:
   BUILD_VERSION: latest # Computed
+  BUILD_TYPE: unknown # Computed
+  PKG_TYPE: unknown # Computed
   DOCKER_HUB_USER: defi
   MAKE_DEBUG: 0
   GIT_VERSION: 1
 
 jobs:
-  create-release:
+  build:
     runs-on: ubuntu-latest
     container: defi/ain-builder:latest
     if: startsWith(github.ref, 'refs/tags/')
@@ -72,9 +74,9 @@ jobs:
         asset_name: defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}.${{ env.PKG_TYPE }}.SHA256
         asset_content_type: text/plain
 
-  create-docker-release:
+  dockerize:
     runs-on: ubuntu-latest
-    needs: [create-release]
+    needs: [build]
     env:
       TARGET: x86_64-pc-linux-gnu
 
@@ -93,8 +95,8 @@ jobs:
     - name: Unpack binaries
       run: tar -xvzf ./build/defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}.${{ env.PKG_TYPE }} -C ./build/
 
-    - name: Build defi image
-      run: rm .dockerignore && ./make.sh docker-build-from-binaries
+    - name: Build image
+      run: rm .dockerignore && ./make.sh docker-generate-from-build
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
